--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-
+    <!--We'll be adding more content later-->
+      <title>Star</title>
+      <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css."/>
   </head>
   <body>
-
+      <p>Star</p>
   </body>
 </html>
