--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
       <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css."/>
   </head>
   <body>
-      <p>Star</p>
+      <h1>Star</h1>
+      <h4><i>Travel at Tremendous Discount</i></h4>
+      <p><i>Travel Agents will get you where you want to go, when 
+        you want to go, for the price you want to pay!</i>
+      </p>
   </body>
 </html>
